src/app/billing/billing-step4/billing-step4.component.scss
.mainContent {
  background-color: white;
}
.titleOne {
  font-size: 15px;
  padding-left: 50px;
  padding-top: 40px;
}
.subTable {
  background-color: #f7f8fb;
}
.tabInfo {
  width: 50%;
}
.colSpace {
  margin-left: 10px;
}
.back {
  margin-left: 50px;
  margin-right: 550px;
  margin-bottom: 20px;
  background-color: #ffffff;
}
.backbtn {
  display: block;
  background-color: #ffffff;
  color: #1c67f5;
  width: 180px;
  height: 38px;
  border-radius: 3px;
  border-color: #1c67f5;
  border-width: 1px;
  margin-top: 25px;
  cursor: pointer;
  // box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
  float: left;
}
.continuebtn {
  display: block;
  background-color: #1c67f5;
  color: #ffffff;
  width: 180px;
  height: 38px;
  border-radius: 3px;
  border: none;
  margin-top: 25px;
  cursor: pointer;
  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
  float: right;
}
.sTable {
  margin-left: 50px;
  margin-top: 20px;
  margin-bottom: 40px;
}
.txtContent {
  padding: 20px;
  background-color: #f7f8fb;
}
.titleFun {
  font-size: 15px;
  font-weight: 600;
}
.bgSet {
  background-color: #f7f8fb;
  padding: 8px;
  font-size: 14px;
}
.bgSet2 {
  background-color: #669bff;
  color: white;
  align-content: center;
  font-size: 14px;
}
.bgBottom {
  background-color: white;
}
.titleContent {
  font-size: 12px;
  padding-top: 10px;
}
.tContent {
  font-size: 12px;
  padding-top: 10px;
  color: #0064ff;
}
.info {
  padding-right: 10px;
}
.row {
  margin-right: 0px !important;
  margin-left: 0px !important;
}

